--- a/.env
+++ b/.env
@@ -18,3 +18,9 @@
 APP_ENV=dev
 APP_SECRET=
 ###< symfony/framework-bundle ###
+
+ROYAL_MAIL_API_KEY=
+DHL_API_KEY=
+DPD_API_KEY=
+EVRI_API_KEY=
+UPS_API_KEY=
