--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "symfony/yaml": "7.2.*"
     },
     "require-dev": {
+        "phpunit/phpunit": "^11.5",
+        "symfony/maker-bundle": "^1.62"
     },
     "config": {
         "allow-plugins": {
